--- a/src/scss/_intro.scss
+++ b/src/scss/_intro.scss
@@ -24,6 +24,7 @@
     border: 2px solid $mainColor;
     box-sizing: border-box;
     padding: 50px;
+    overflow: hidden;
   }
 
   &__header {
